--- a/reference/common/schemas/user-model.yaml
+++ b/reference/common/schemas/user-model.yaml
@@ -37,7 +37,7 @@ properties:
     description: Data wygasania konta użytkownika
 example:
   id: '1'
-  email: abc@def.pl
+  email: abc@mgbi.pl
   is_active: true
   is_admin: false
   creation_datetime: '2021-11-10T15:20:20.584Z'
