updates-model Id type fix and example fix

--- a/reference/common/schemas/updates-model.yaml
+++ b/reference/common/schemas/updates-model.yaml
@@ -9,8 +9,7 @@ type: object
 properties:
   id:
     title: Id
-    type: string
-    description: Unikalny identyfikator zarejestrowanej aktualizacji
+    type: integer
   creation_datetime:
     title: Creation Datetime
     type: string
