correct user example

--- a/reference/common/schemas/user-model.yaml
+++ b/reference/common/schemas/user-model.yaml
@@ -36,9 +36,9 @@ properties:
     nullable: true
     description: Data wygasania konta użytkownika
 example:
-  id: '1'
+  id: 62220466f48a3bfd27aaf800
   email: abc@mgbi.pl
   is_active: true
   is_admin: false
-  creation_datetime: '2021-11-10T15:20:20.584Z'
-  deactivation_datetime: '2021-11-10T15:20:20.584Z'
+  creation_datetime: '2022-03-03T13:21:58.550020+01:00'
+  deactivation_datetime: '2022-07-01T13:21:58.550392+02:00'
