--- a/reference/common/schemas/announcement-model.yaml
+++ b/reference/common/schemas/announcement-model.yaml
@@ -426,9 +426,9 @@ example:
   - info:
       first_name: Jan
       last_name: Kowalski
-      ownership_type: własność krajowych osób fizycznych
-      cleaned_name: Jan Kowalski
       legal_form: osoby fizyczne nieprowadzące działalności gospodarczej
+      cleaned_name: Jan Kowalski
+      ownership_type: własność krajowych osób fizycznych
     numbers: {}
     address: {}
   proceeding:
@@ -437,20 +437,20 @@ example:
     court_department: V Wydział Gospodarczy
     court_name: Sąd Rejonowy w XXX
   order:
-    order_date: '2021-09-01T00:00:00'
+    order_date: '2021-09-01'
     expiration_period: 7
-    expiration_date: '2021-11-11T00:00:00'
+    expiration_date: '2021-11-11'
   msig_entry:
     chapter: 0
-    position_number: '00000'
-    issue_date: '2021-11-04T00:00:00'
-    signature: BMSiG-00000/2021
     url: http://www.imsig.pl/pozycja/2021/214/00000
+    issue_date: '2021-11-04'
+    signature: BMSiG-00000/2021
+    position_number: '00000'
     section: 9
     yearly_number: '214'
   krz_entry:
     chapter: 1
-    issue_date: '2021-12-08T00:00:00Z'
+    issue_date: '2021-12-08'
     section: 20
     signature: 20211208/00001
   content:
