--- a/reference/common/schemas/params-model.yaml
+++ b/reference/common/schemas/params-model.yaml
@@ -68,117 +68,7 @@ properties:
   available_content:
     type: array
     items:
-      type: string
-      title: FieldsEnum
-      enum:
-      - entity.info.cleaned_name
-      - entity.info.first_name
-      - entity.info.last_name
-      - entity.info.legal_form
-      - entity.info.ownership_type
-      - entity.info.primary_business
-      - entity.info.commencement_date
-      - entity.numbers.nip
-      - entity.numbers.regon
-      - entity.numbers.krs
-      - entity.numbers.pesel
-      - entity.address.state
-      - entity.address.powiat
-      - entity.address.gmina
-      - entity.address.town
-      - entity.address.street
-      - entity.address.house_number
-      - entity.address.flat_number
-      - entity.address.zip_code
-      - entity.address.post_office
-      - proceeding.court_name
-      - proceeding.court_department
-      - proceeding.signatures
-      - proceeding.commissioner_name
-      - proceeding.commissioner_deputy_name
-      - proceeding.administrator_name
-      - proceeding.administrator_function
-      - proceeding.administrator_licence_number
-      - proceeding.administrator_address
-      - proceeding.administrator_zip_code
-      - proceeding.administrator_town
-      - proceeding.administrator_source_url
-      - order.order_date
-      - order.expiration_period
-      - order.expiration_date
-      - msig_entry.chapter
-      - msig_entry.section
-      - msig_entry.signature
-      - msig_entry.issue_date
-      - msig_entry.yearly_number
-      - msig_entry.position_number
-      - msig_entry.url
-      - krz_entry.chapter
-      - krz_entry.section
-      - krz_entry.subsection
-      - krz_entry.signature
-      - krz_entry.issue_date
-      - krz_entry.url
-      - content.text
-      - content.html
-      - content.url
-      description: |-
-        <details><summary>Pokaż możliwe opcje</summary>
-
-        | Wartość | Nazwa  |
-        |-|-|
-        | `entity.info.cleaned_name` | Entity_info_cleaned_name |
-        | `entity.info.first_name` | Entity_info_first_name |
-        | `entity.info.last_name` | Entity_info_last_name |
-        | `entity.info.legal_form` | Entity_info_legal_form |
-        | `entity.info.ownership_type` | Entity_info_ownership_type |
-        | `entity.info.primary_business` | Entity_info_primary_business |
-        | `entity.info.commencement_date` | Entity_info_commencement_date |
-        | `entity.numbers.nip` | Entity_numbers_nip |
-        | `entity.numbers.regon` | Entity_numbers_regon |
-        | `entity.numbers.krs` | Entity_numbers_krs |
-        | `entity.numbers.pesel` | Entity_numbers_pesel |
-        | `entity.address.state` | Entity_address_state |
-        | `entity.address.powiat` | Entity_address_powiat |
-        | `entity.address.gmina` | Entity_address_gmina |
-        | `entity.address.town` | Entity_address_town |
-        | `entity.address.street` | Entity_address_street |
-        | `entity.address.house_number` | Entity_address_house_number |
-        | `entity.address.flat_number` | Entity_address_flat_number |
-        | `entity.address.zip_code` | Entity_address_zip_code |
-        | `entity.address.post_office` | Entity_address_post_office |
-        | `proceeding.court_name` | Proceeding_court_name |
-        | `proceeding.court_department` | Proceeding_court_department |
-        | `proceeding.signatures` | Proceeding_signatures |
-        | `proceeding.commissioner_name` | Proceeding_commissioner_name |
-        | `proceeding.commissioner_deputy_name` | Proceeding_commissioner_deputy_name |
-        | `proceeding.administrator_name` | Proceeding_administrator_name |
-        | `proceeding.administrator_function` | Proceeding_administrator_function |
-        | `proceeding.administrator_licence_number` | Proceeding_administrator_licence_number |
-        | `proceeding.administrator_address` | Proceeding_administrator_address |
-        | `proceeding.administrator_zip_code` | Proceeding_administrator_zip_code |
-        | `proceeding.administrator_town` | Proceeding_administrator_town |
-        | `proceeding.administrator_source_url` | Proceeding_administrator_source_url |
-        | `order.order_date` | Order_order_date |
-        | `order.expiration_period` | Order_expiration_period |
-        | `order.expiration_date` | Order_expiration_date |
-        | `msig_entry.chapter` | Msig_entry_chapter |
-        | `msig_entry.section` | Msig_entry_section |
-        | `msig_entry.signature` | Msig_entry_signature |
-        | `msig_entry.issue_date` | Msig_entry_issue_date |
-        | `msig_entry.yearly_number` | Msig_entry_yearly_number |
-        | `msig_entry.position_number` | Msig_entry_position_number |
-        | `msig_entry.url` | Msig_entry_url |
-        | `krz_entry.chapter` | Krz_entry_chapter |
-        | `krz_entry.section` | Krz_entry_section |
-        | `krz_entry.subsection` | Krz_entry_subsection |
-        | `krz_entry.signature` | Krz_entry_signature |
-        | `krz_entry.issue_date` | Krz_entry_issue_date |
-        | `krz_entry.url` | Krz_entry_url |
-        | `content.text` | Content_text |
-        | `content.html` | Content_html |
-        | `content.url` | Content_url |</details>
-    title: Available Content
+      $ref: ../schemas.yaml#/FieldsEnum
     description: |-
       Lista identyfikatorów pól, które użytkownik może uwzględnić w raportach
       <details>
