--- a/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
@@ -7,7 +7,7 @@ parameters:
   schema:
     title: Id
     type: string
-    example: '222222222222222222222222'
+    example: 6221c40c843d0d773f37cd4b
     maxLength: 24
     minLength: 24
   name: id
