--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -14,7 +14,7 @@ parameters:
       description: Zwraca ostatni dostępny filtr
       maxLength: 4
       minLength: 4
-    example: '222222222222222222222222'
+    example: 6221c40ca9ab2f868237cd47
     maxLength: 24
     minLength: 24
   name: id
