--- a/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
@@ -7,7 +7,7 @@ parameters:
   schema:
     title: Id
     type: string
-    example: '222222222222222222222222'
+    example: 6221c40cff11c462e837cd51
     maxLength: 24
     minLength: 24
   name: id
