--- a/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
+++ b/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
@@ -7,7 +7,7 @@ parameters:
   schema:
     title: Id
     type: string
-    example: '222222222222222222222222'
+    example: 6221c40c51fce5ae9f37cd48
     maxLength: 24
     minLength: 24
   name: id
