--- a/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
@@ -56,7 +56,7 @@ responses:
             $ref: '#/components/schemas/Error'
 description: |-
   Usuwa monitoringi o identyfikatorach przekazanych w kolejnych parametrach `ids`
-  w query stringu.
+  w query stringu, można podać wiele identyfikatorów oddzielonych przecinkami w jednym parametrze `ids`.
 
   W przypadku sukcesu metoda zwraca kod odpowiedzi `204 No Content`.
 components:
