--- a/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
+++ b/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
@@ -59,7 +59,7 @@ responses:
             $ref: '#/components/schemas/Error'
 description: |-
   Usuwa raporty o identyfikatorach przekazanych w kolejnych parametrach `ids`
-  w query stringu.
+  w query stringu, można podać wiele identyfikatorów oddzielonych przecinkami w jednym parametrze `ids`.
 
   W przypadku sukcesu metoda zwraca kod odpowiedzi `204 No Content`.
 components:
