--- a/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
+++ b/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
@@ -7,9 +7,7 @@ parameters:
   schema:
     title: Ids
     type: string
-    example:
-    - 6221c40ca9ab2f868237cd47
-    - 6189ba008749c5e836fa4cf6
+    example: 6221c40ca9ab2f868237cd47,6189ba008749c5e836fa4cf6
     minLength: 24
   name: ids
   in: query
@@ -55,11 +53,9 @@ responses:
             error: Forbidden
           items:
             $ref: '#/components/schemas/Error'
-description: |-
-  Usuwa filtry o identyfikatorach przekazanych w kolejnych parametrach `ids`
-  w query stringu, można podać wiele identyfikatorów oddzielonych przecinkami w jednym parametrze `ids`.
-
-  W przypadku sukcesu metoda zwraca kod odpowiedzi `204 No Content`.
+description: "Usuwa filtry o identyfikatorach przekazanych w parametrze `ids` w query\
+  \ stringu, \nidentyfikatory muszą być oddzielone przecinkami.\n\nW przypadku sukcesu\
+  \ metoda zwraca kod odpowiedzi `204 No Content`."
 components:
   schemas:
     $ref: ../../common/schemas.yaml
