--- a/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
@@ -7,8 +7,7 @@ parameters:
   schema:
     title: Ids
     type: string
-    example: 6221c40ca9ab2f868237cd47
-    maxLength: 24
+    example: 6221c40ca9ab2f868237cd47,6189ba008749c5e836fa4cf6
     minLength: 24
   name: ids
   in: query
@@ -54,11 +53,9 @@ responses:
             error: Forbidden
           items:
             $ref: '#/components/schemas/Error'
-description: |-
-  Usuwa monitoringi o identyfikatorach przekazanych w kolejnych parametrach `ids`
-  w query stringu, można podać wiele identyfikatorów oddzielonych przecinkami w jednym parametrze `ids`.
-
-  W przypadku sukcesu metoda zwraca kod odpowiedzi `204 No Content`.
+description: "Usuwa monitoringi o identyfikatorach przekazanych w parametrze `ids`\
+  \ w query stringu, \nidentyfikatory muszą być oddzielone przecinkami.\n\nW przypadku\
+  \ sukcesu metoda zwraca kod odpowiedzi `204 No Content`."
 components:
   schemas:
     $ref: ../../common/schemas.yaml
