--- a/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
@@ -3,15 +3,17 @@ tags:
 summary: DELETE /v2/monitors
 operationId: delete_monitors_v2_monitors_delete
 parameters:
-- required: false
+- description: Lista identyfikatorów monitoringów.
+  required: true
   schema:
-    title: Ids
-    type: string
-    example: 6221c40ca9ab2f868237cd47,6189ba008749c5e836fa4cf6
+    title: List of id
     minLength: 24
+    type: string
+    description: A list of id's whose ones are strings representing the ObjectId from
+      bson.
+    example: 6221c40ca9ab2f868237cd47,6189ba008749c5e836fa4cf6
   name: ids
   in: query
-  description: Lista identyfikatorów monitoringów.
 - required: false
   schema:
     title: Authorization
