--- a/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
@@ -66,7 +66,8 @@ description: |-
   Zwraca listę monitoringów przypisanych do aktualnego użytkownika.
 
   Aby ograniczyć listę zwracanych pól, warto ustawić parametr `exclude`
-  na listę pól, które nie są wymagane w odpowiedzi, np. `["notifications"]`.
+  na pole, które nie jest wymagane w odpowiedzi, np. `exclude=notifications`.
+  Moża ukrywać wiele (niewymaganych w odpowiedzi) pól przekazując nazwy pól w kolejnych parametrach `exclude`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
