correct user.creation_datetime description

--- a/reference/common/schemas/user-model.yaml
+++ b/reference/common/schemas/user-model.yaml
@@ -28,7 +28,7 @@ properties:
     title: Creation Datetime
     type: string
     format: date-time
-    description: Data wygasania konta użytkownika
+    description: Data utworzenia konta użytkownika
   deactivation_datetime:
     title: Deactivation Datetime
     type: string
