--- a/reference/ins_api/paths/user-v2-users-id-GET.yaml
+++ b/reference/ins_api/paths/user-v2-users-id-GET.yaml
@@ -31,7 +31,7 @@ responses:
             creation_datetime:
               format: date-time
               type: string
-              description: Data wygasania konta użytkownika
+              description: Data utworzenia konta użytkownika
               title: Creation Datetime
             deactivation_datetime:
               format: date-time
