--- a/reference/ins_api/paths/create-user-v2-users-POST.yaml
+++ b/reference/ins_api/paths/create-user-v2-users-POST.yaml
@@ -54,7 +54,7 @@ responses:
             creation_datetime:
               format: date-time
               type: string
-              description: Data wygasania konta użytkownika
+              description: Data utworzenia konta użytkownika
               title: Creation Datetime
             deactivation_datetime:
               format: date-time
