--- a/reference/ins_api/paths/users-v2-users-GET.yaml
+++ b/reference/ins_api/paths/users-v2-users-GET.yaml
@@ -32,7 +32,7 @@ responses:
               creation_datetime:
                 format: date-time
                 type: string
-                description: Data wygasania konta użytkownika
+                description: Data utworzenia konta użytkownika
                 title: Creation Datetime
               deactivation_datetime:
                 format: date-time
