--- a/reference/common/schemas/content-filters-model.yaml
+++ b/reference/common/schemas/content-filters-model.yaml
@@ -1,41 +1,48 @@
 title: ContentFiltersModel
-type: array
+type: object
 properties:
   nip:
     title: Nip
     type: array
     items:
       type: string
+    description: Lista numerów NIP
   regon:
     title: Regon
     type: array
     items:
       type: string
+    description: Lista numerów REGON
   krs:
     title: Krs
     type: array
     items:
       type: string
+    description: Lista identyfikatorów KRS
   pesel:
     title: Pesel
     type: array
     items:
       type: string
+    description: Lista numerów PESEL
   krz_signature:
     title: Krz Signature
     type: array
     items:
       type: string
+    description: Lista sygnatur obwieszczeń z Krajowego Rejestru Zadłużonych
   msig_signature:
     title: Msig Signature
     type: array
     items:
       type: string
+    description: Lista sygnatur obwieszczeń z Monitora Sądowego i Gospodarczego
   name:
     title: Name
     type: array
     items:
       type: string
+    description: Lista osób, których dotyczą obweiszczenia (`imię nazwisko`)
 example:
   nip:
   - '7272849598'
@@ -52,3 +59,4 @@ example:
   name:
   - Jan Kowalski
   - Ambroży Nielepszy
+description: Zawartość filtra
