correct filter content

--- a/reference/common/schemas/filters-model.yaml
+++ b/reference/common/schemas/filters-model.yaml
@@ -11,67 +11,67 @@ properties:
     description: Nazwa filtra
   content:
     $ref: ../schemas.yaml#/ContentFiltersModel
-    example:
+    title: ContentFiltersModel
+    type: object
+    properties:
+      nip:
+        title: Nip
+        type: array
+        items:
+          type: string
+        description: Lista numerów NIP
+      regon:
+        title: Regon
+        type: array
+        items:
+          type: string
+        description: Lista numerów REGON
+      krs:
+        title: Krs
+        type: array
+        items:
+          type: string
+        description: Lista identyfikatorów KRS
+      pesel:
+        title: Pesel
+        type: array
+        items:
+          type: string
+        description: Lista numerów PESEL
+      krz_signature:
+        title: Krz Signature
+        type: array
+        items:
+          type: string
+        description: Lista sygnatur obwieszczeń z Krajowego Rejestru Zadłużonych
       msig_signature:
-      - XIV GUp 83/16
+        title: Msig Signature
+        type: array
+        items:
+          type: string
+        description: Lista sygnatur obwieszczeń z Monitora Sądowego i Gospodarczego
+      name:
+        title: Name
+        type: array
+        items:
+          type: string
+        description: Lista osób, których dotyczą obweiszczenia (`imię nazwisko`)
+    example:
+      nip:
+      - '7272849598'
       regon:
       - '272404100'
-      krz_signature:
-      - BY1B/GUp/13/2021
       krs:
       - '0000422121'
       pesel:
       - '41041202774'
-      nip:
-      - '7272849598'
+      krz_signature:
+      - BY1B/GUp/13/2021
+      msig_signature:
+      - XIV GUp 83/16
       name:
       - Jan Kowalski
       - Ambroży Nielepszy
-    type: object
-    properties:
-      msig_signature:
-        items:
-          type: string
-        type: array
-        description: Sygnatura ogłoszenia w MSiG
-        title: Msig Signature
-      regon:
-        items:
-          type: string
-        type: array
-        description: Numer REGON podmiotu
-        title: Regon
-      krz_signature:
-        items:
-          type: string
-        type: array
-        description: Sygnatura ogłoszenia w KRZ
-        title: Krz Signature
-      krs:
-        items:
-          type: string
-        type: array
-        description: Numer KRS podmiotu
-        title: Krs
-      pesel:
-        items:
-          type: string
-        type: array
-        description: Numer PESEL
-        title: Pesel
-      nip:
-        items:
-          type: string
-        type: array
-        description: Numer NIP podmiotu
-        title: Nip
-      name:
-        items:
-          type: string
-        type: array
-        description: Imię i nazwisko
-        title: Name
-    title: ContentFiltersModel
     description: Zawartość filtra
   id:
     title: Id
