--- a/reference/common/schemas/updates-model.yaml
+++ b/reference/common/schemas/updates-model.yaml
@@ -23,6 +23,7 @@ properties:
   added_records_count:
     title: Added Records Count
     type: integer
+    description: Ilość dodanych rekordów
   source:
     $ref: ../schemas.yaml#/SourceEnum
     enum:
